	Avoid potentially invalid access dicovered by Ethan with the help of
	valgrind.

	* src/fit.c (show_fit1):  Use fputs instead of fprintf when no formatting
	is done.

2013-05-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): Treating timedata columns as strings allows
	functions column(N) and column("HEADER") to work on time data.
	Bug #1161

2013-05-22  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.c(draw_clip_polygon) src/term.c(do_arc):
	Fix polygon clipping code when intersections are degenerate.
	Bugs #1237 #1242

2013-05-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/stdfn.c (gp_strtod):
	The code that skips leading whitespace in a data file must match the
	behaviour of strtod(), implicitly the same as isspace().
	It is not sufficient to skip space and tab, we must also skip embedded
	\r \v and so on.  This same problem would hit the private implementation 
	gp_strtod(), which fortunately is never used.  So just get rid of it.
	Bug #1243 

2013-05-21  Ethan A Merritt  <merritt@u.washington.edu>

	* term/README src/wxterminal/gp_cairo.c src/qtterminal/QtGnuplotScene.cpp
	Clarify comments about use of term->boxed_text().
	Tweak the bounding box used for regular text in Qt to agree better with
	the bounding box used for enhanced text.

	* src/gadgets.c src/qtterminal/QtGnuplotScene.cpp src/term_api.h
	src/wxterminal/gp_cairo.c term/README term/cairo.trm term/gd.trm
	term/post.trm term/svg.trm term/x11.trm:  Define an enum TEXTBOX_* for
	the options parameter to term->boxed_text().

2013-05-20  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm:  It doesn't work to call EMF_setfont() before we
	enter graphics state.  Bugfix.

2013-05-19  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/gadgets.c src/gadgets.h src/save.c src/set.c
	src/show.c src/tables.c src/tables.h src/term_api.h src/unset.c
	docs/gnuplot.doc:

	New text label attribute `boxed`. The appearance of boxed labels is